--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <script>
 
 
-const pages = ["file:///Users/seokjinnie/Desktop/1/index.html","file:///Users/seokjinnie/Desktop/2.0/index.html","file:///Users/seokjinnie/Desktop/4/index.html"];
+const pages = ["index1.html","index2.html","index3.html"];
 
 function goRandom() {
     const randomPage = pages[Math.floor(Math.random() * pages.length)];
