--- a/index1.html
+++ b/index1.html
@@ -42,11 +42,11 @@
 <script>
    
     const themes = [
-        { className: 't1', link: 'file:///Users/seokjinnie/Desktop/home%20page/index.html' },
-        { className: 't2', link: 'file:///Users/seokjinnie/Desktop/home%20page/index.html' },
-        { className: 't3', link: 'file:///Users/seokjinnie/Desktop/home%20page/index.html' },
-        { className: 't4', link: 'file:///Users/seokjinnie/Desktop/home%20page/index.html' },
-        { className: 't5', link: 'file:///Users/seokjinnie/Desktop/home%20page/index.html' },
+        { className: 't1', link: 'index.html' },
+        { className: 't2', link: 'index.html' },
+        { className: 't3', link: 'index.html' },
+        { className: 't4', link: 'index.html' },
+        { className: 't5', link: 'index.html' },
     ];
 
    
